--- a/linHsientang.html
+++ b/linHsientang.html
@@ -1,6 +1,7 @@
 <title>
   Dr. Hsien-Tang Lin
 </title>
+<meta name="description" content="Dr. Hsien-Tang Lin, the father of the parliament of Taiwan 林獻堂 台灣議會之父">
 <head>
   <link   rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
